Ajout de la fonctionnalité "Pousser des blocks" + Avancement de la partie Vue

--- a/Projet_RodentRevenge/src/fxml/LevelWindow.fxml
+++ b/Projet_RodentRevenge/src/fxml/LevelWindow.fxml
@@ -1,14 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<Pane fx:id="mainPane" prefHeight="256" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LevelWindowController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
-</Pane>
+<GridPane fx:id="window" maxHeight="-Infinity" maxWidth="-Infinity" stylesheets="@../resources/style/style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.LevelWindowController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="25.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="400.0" minHeight="10.0" prefHeight="400.0" vgrow="SOMETIMES" />
+   </rowConstraints>
+   <children>
+       <Pane fx:id="topPane" minHeight="25.0" maxHeight="25.0">
+           <children>
+               <Label fx:id="compteur" minWidth="${window.width}"/>
+           </children>
+       </Pane>
+      <Pane fx:id="mainPane" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+          <children />
+      </Pane>
+       <GridPane fx:id="menu" maxWidth="180.0" prefHeight="${window.height}" prefWidth="180.0" GridPane.rowSpan="2">
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="90.0" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" />
+            <RowConstraints minHeight="10.0" prefHeight="35.0" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" />
+            <RowConstraints minHeight="10.0" prefHeight="35.0" />            
+         </rowConstraints>
+         <children>
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="My Rodent Revenge" GridPane.halignment="CENTER" />
+            <Button fx:id="bPlay" mnemonicParsing="false" onAction="#buttonActionTogglePlayPause" text="Jouer" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <Button fx:id="bQuit" mnemonicParsing="false" onAction="#buttonActionQuit" text="Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+         </children>
+         <columnConstraints>
+            <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="180.0" />
+         </columnConstraints>
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin>
+      </GridPane>
+   </children>
+</GridPane>
