--- a/Projet_RodentRevenge/src/fxml/LevelWindow.fxml
+++ b/Projet_RodentRevenge/src/fxml/LevelWindow.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -18,17 +17,21 @@
       <RowConstraints maxHeight="400.0" minHeight="10.0" prefHeight="400.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-       <Pane fx:id="topPane" minHeight="25.0" maxHeight="25.0">
+       <Pane fx:id="topPane" maxHeight="25.0" minHeight="25.0">
            <children>
-               <Label fx:id="compteur" minWidth="${window.width}"/>
+               <Label fx:id="compteur" minWidth="${window.width}" />
            </children>
        </Pane>
       <Pane fx:id="mainPane" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
-          <children />
+          <children>
+              
+          </children>
       </Pane>
        <GridPane fx:id="menu" maxWidth="180.0" prefHeight="${window.height}" prefWidth="180.0" GridPane.rowSpan="2">
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="90.0" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" />
+            <RowConstraints minHeight="10.0" prefHeight="35.0" />
             <RowConstraints minHeight="10.0" prefHeight="10.0" />
             <RowConstraints minHeight="10.0" prefHeight="35.0" />
             <RowConstraints minHeight="10.0" prefHeight="10.0" />
@@ -37,7 +40,8 @@
          <children>
             <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="My Rodent Revenge" GridPane.halignment="CENTER" />
             <Button fx:id="bPlay" mnemonicParsing="false" onAction="#buttonActionTogglePlayPause" text="Jouer" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-            <Button fx:id="bQuit" mnemonicParsing="false" onAction="#buttonActionQuit" text="Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <Button fx:id="bQuit1" mnemonicParsing="false" onAction="#buttonActionSave" text="Sauvegarder" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+            <Button fx:id="bQuit" mnemonicParsing="false" onAction="#buttonActionQuit" text="Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
          </children>
          <columnConstraints>
             <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="180.0" />
