--- a/Projet_RodentRevenge/src/fxml/MainWindow.fxml
+++ b/Projet_RodentRevenge/src/fxml/MainWindow.fxml
@@ -6,19 +6,20 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" 
-          stylesheets="@../resources/style/style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindowController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" stylesheets="@../resources/style/style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindowController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" valignment="CENTER" vgrow="ALWAYS" />
     <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="buttonStart" mnemonicParsing="false" onAction="#startLevel" text="&gt; Jouer" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-      <Button fx:id="buttonQuit" mnemonicParsing="false" onAction="#quitApplication" text="&gt; Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <ListView fx:id="listLevels" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+      <Button fx:id="buttonStart" mnemonicParsing="false" onAction="#buttonActionStartLevel" text="&gt; Jouer" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+      <Button fx:id="buttonQuit" mnemonicParsing="false" onAction="#buttonActionQuitApplication" text="&gt; Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+      <ListView fx:id="listLevels" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" onAction="#buttonActionContinue" text="&gt; Continuer" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
    </children>
 </GridPane>
