--- a/Projet_RodentRevenge/src/fxml/LevelWindow.fxml
+++ b/Projet_RodentRevenge/src/fxml/LevelWindow.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -39,9 +40,18 @@
          </rowConstraints>
          <children>
             <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="My Rodent Revenge" GridPane.halignment="CENTER" />
-            <Button fx:id="bPlay" mnemonicParsing="false" onAction="#buttonActionTogglePlayPause" text="Jouer" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-            <Button fx:id="bQuit1" mnemonicParsing="false" onAction="#buttonActionSave" text="Sauvegarder" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-            <Button fx:id="bQuit" mnemonicParsing="false" onAction="#buttonActionQuit" text="Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
+            <Button fx:id="bPlay" mnemonicParsing="false" onAction="#buttonActionTogglePlayPause" text="Jouer" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+               <tooltip>
+                  <Tooltip text="Commencer" />
+               </tooltip></Button>
+            <Button fx:id="bQuit1" mnemonicParsing="false" onAction="#buttonActionSave" text="Sauvegarder" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+               <tooltip>
+                  <Tooltip text="Sauvegarder et Retourner au menu" />
+               </tooltip></Button>
+            <Button fx:id="bQuit" mnemonicParsing="false" onAction="#buttonActionQuit" text="Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+               <tooltip>
+                  <Tooltip text="Quitter le jeu" />
+               </tooltip></Button>
          </children>
          <columnConstraints>
             <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="180.0" />
