--- a/Projet_RodentRevenge/src/fxml/MainWindow.fxml
+++ b/Projet_RodentRevenge/src/fxml/MainWindow.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" stylesheets="@../resources/style/style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindowController">
+<GridPane fx:id="launch" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" stylesheets="@../resources/style/style.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainWindowController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -17,9 +19,21 @@
     <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="buttonStart" mnemonicParsing="false" onAction="#buttonActionStartLevel" text="&gt; Jouer" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-      <Button fx:id="buttonQuit" mnemonicParsing="false" onAction="#buttonActionQuitApplication" text="&gt; Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-      <ListView fx:id="listLevels" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-      <Button mnemonicParsing="false" onAction="#buttonActionContinue" text="&gt; Continuer" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+      <Button fx:id="buttonStart" mnemonicParsing="false" onAction="#buttonActionStartLevel" text="&gt; Jouer" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+         <tooltip>
+            <Tooltip text="Jouer le niveau choisi" />
+         </tooltip></Button>
+      <Button fx:id="buttonQuit" mnemonicParsing="false" onAction="#buttonActionQuitApplication" text="&gt; Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+         <tooltip>
+            <Tooltip text="Quitter le jeu" />
+         </tooltip></Button>
+      <ListView fx:id="listLevels" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets left="10.0" right="10.0" />
+         </GridPane.margin></ListView>
+      <Button fx:id="buttonCont" mnemonicParsing="false" onAction="#buttonActionContinue" text="&gt; Continuer" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <tooltip>
+            <Tooltip text="Continuer le niveau sauvegardé" />
+         </tooltip></Button>
    </children>
 </GridPane>
