--- a/Projet_RodentRevenge/src/fxml/LevelWindow.fxml
+++ b/Projet_RodentRevenge/src/fxml/LevelWindow.fxml
@@ -36,6 +36,8 @@
             <RowConstraints minHeight="10.0" prefHeight="10.0" />
             <RowConstraints minHeight="10.0" prefHeight="35.0" />
             <RowConstraints minHeight="10.0" prefHeight="10.0" />
+            <RowConstraints minHeight="10.0" prefHeight="35.0" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" />
             <RowConstraints minHeight="10.0" prefHeight="35.0" />            
          </rowConstraints>
          <children>
@@ -48,7 +50,12 @@
                <tooltip>
                   <Tooltip text="Sauvegarder et Retourner au menu" />
                </tooltip></Button>
-            <Button fx:id="bQuit" mnemonicParsing="false" onAction="#buttonActionQuit" text="Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+            <Button fx:id="bBack" mnemonicParsing="false" onAction="#buttonActionBackMenu" text="Retour au Menu" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+               <tooltip>
+                  <Tooltip text="Retourner au menu" />
+               </tooltip>
+            </Button>
+            <Button fx:id="bQuit" mnemonicParsing="false" onAction="#buttonActionQuit" text="Quitter" GridPane.halignment="CENTER" GridPane.rowIndex="8">
                <tooltip>
                   <Tooltip text="Quitter le jeu" />
                </tooltip></Button>
