--- a/Projet_RodentRevenge/src/fxml/LevelCreationWindow.fxml
+++ b/Projet_RodentRevenge/src/fxml/LevelCreationWindow.fxml
@@ -17,14 +17,13 @@
    </columnConstraints>
     <children>
         <Pane fx:id="mainPane">
-          <children>
-          </children>
+          <children />
         </Pane>
         <GridPane fx:id="controlPane" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" GridPane.columnIndex="1">
             <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" />
-               <ColumnConstraints hgrow="SOMETIMES" />
-            <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
+                <ColumnConstraints hgrow="SOMETIMES" />
             </columnConstraints>
             <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" />
